# PortfolioWebsite

./: .env.example  .gitignore  CLAUDE.md  Dockerfile
.claude/: settings.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_chunks_table.py
backend/app/: config.py  main.py  models.py
backend/app/api/: chat.py
backend/app/middleware/: rate_limit.py
backend/app/rag/: embed.py  prompt.py  retrieve.py
backend/scripts/: ingest.py  scrape_github.py
backend/tests/: conftest.py  test_chat_api.py  test_embed.py  test_prompt.py  test_rate_limit.py  test_retrieve.py
docs/learning/: 01-project-setup-and-architecture.md
docs/superpowers/plans/: 2026-06-05-portfolio-website.md
docs/superpowers/specs/: 2026-06-05-chat-markdown-formatting-design.md  2026-06-05-portfolio-website-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: portfolio.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  ChatWidget.tsx  Footer.tsx  Hero.tsx  Hobbies.tsx  Navbar.tsx  ProjectCards.tsx  SiteShowcase.tsx  Skills.tsx  Timeline.tsx
frontend/src/data/: experience.ts
frontend/src/hooks/: useChat.ts
frontend/src/test/: Navbar.test.tsx  Timeline.test.tsx  useChat.test.ts
knowledge-base/: aws-work.md  education-projects.md  github-projects.md  northrop-work.md  personal-bio.md
